--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -695,17 +695,27 @@
     }
 
     .scroll-to-top {
+        display: none;
         height: 120px;
         width: 120px;
-        background-color: $white;
-        border: 2px solid $black;
-        position: absolute;
+        background-color: #fff;
+        border: 2px solid #000;
+        position: fixed;
         right: 0;
         bottom: 0;
-        display: flex;
         align-items: center;
         justify-content: center;
         cursor: pointer;
+        margin-bottom: 0;
+        z-index: 100;
+
+        @media (min-width: 767.98px){
+            margin-bottom: 198px;
+        }
+    }
+
+    .scroll-to-top.visible {
+        display: flex;
     }
 
     .steps {
@@ -797,8 +807,12 @@
             align-items: center;
             justify-content: center;
             cursor: pointer;
-            margin-bottom: 198px;
+            margin-bottom: 0;
             z-index: 100;
+
+            @media (min-width: 767.98px){
+                margin-bottom: 198px;
+            }
         }
 
         .scroll-to-top.visible {
