fixed soundscape 2 columns in mobile

--- a/_sass/global.scss
+++ b/_sass/global.scss
@@ -677,7 +677,7 @@ body {
 
 /* PLAYER LIST  STARTS HERE*/
 .player-list {
-  margin: 30px 0 0;
+  margin: 30px 0;
 
   .player {
     border: 2px solid $black;
