--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -65,7 +65,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: $black; // Black overlay
+            background: rgba(0, 0, 0, 0.293); // Black overlay
             justify-content: center;
             align-items: center;
             transition: 0.3s all ease;
@@ -841,7 +841,7 @@
                 content: "";
                 height: 100%;
                 position: absolute;
-                background-color: #f1f1f1;
+                background-color: $black;
                 opacity: 0.3;
                 left: 0;
                 top: 0;
@@ -854,6 +854,7 @@
             &:hover {
                 &::after {
                     width: 100%;
+                    
                 }
 
                 .card .media .overlay {
