project3 en updated ... fonts in projects changed, tags in newlines

--- a/_layouts/project_details.html
+++ b/_layouts/project_details.html
@@ -48,7 +48,7 @@
                                     <h3>{{ content.tags }}</h3>
                                     <p>
                                         {% for tag in page.tags %}
-                                        <span>{{ tag.name }}</span>
+                                        <span>{{ tag.name }}</span><br>
                                         {% endfor %}
                                     </p>
                                 </div>
