--- a/_sass/global.scss
+++ b/_sass/global.scss
@@ -3,9 +3,9 @@
 $body-bg: #2ea9be;
 $body-color: #fff;
 $font-family: "Lato", sans-serif;
-$font-size: 1rem;
+$font-size: 18px;
 $font-weight: normal;
-$line-height: 1.5;
+$line-height: 160%;
 $primary: #FFCC48;
 $dark: #2C2929;
 $grey: #A5A5A5;
