--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1160,6 +1160,9 @@
         a {
             color: $black;
             display: inline-block;
+        }
+
+        a.list-links {
             margin-bottom: 16px;
         }
 
