--- a/_layouts/project_details.html
+++ b/_layouts/project_details.html
@@ -99,7 +99,7 @@
                             {{ content.media_coverage }}:
                             <br /><br />
                             {% for link in page.links %}
-                            <a href="{{ link.url }}" target="_blank">{{ link.name }}</a>
+                            <a class="list-links" href="{{ link.url }}" target="_blank">{{ link.name }}</a>
                             {% endfor %}
                         </p>
                     </div>
