--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1245,6 +1245,9 @@
                 }
             }
         }
+        .no-card {
+            margin-top: 80px;
+        }
 
         .brief {
             font-size: 18px;
