--- a/_layouts/project_details.html
+++ b/_layouts/project_details.html
@@ -56,35 +56,31 @@
                         </div>
                     </div>
                 </div>
+                {% for bimg in page.before %}
                 <div class="card">
                     <div class="media">
-                        <img src="{{ page.before.image }}" alt="{{ page.before.alt | default: page.before.credits }}" />
+                        <img src="{{ bimg.image }}" alt="{{ bimg.alt | default: bimg.credits }}" />
                     </div>
                     <div class="footer">
-                        {% if {{page.before.alt}} != "" %}
-                            <h3>{{ page.before.alt }}</h3>
-                        {% endif %}
-                        <p>{{ content.credits }}: {{ page.before.credits }}</p>
+                        <h3>{{ bimg.alt }}</h3>
+                        <p>{{ content.credits }}: {{ bimg.credits }}</p>
                     </div>
                 </div>
+                {% endfor %}
                 <div class="brief">
                     <p>{{ page.brief | safe }}</p>
                 </div>
-                {% if {{page.after.image}} != "" %}
+                {% for aimg in page.after %}
                 <div class="card">
                     <div class="media">
-                        <img src="{{ page.after.image }}" alt="{{ page.after.alt | default: page.after.credits }}" />
+                        <img src="{{ aimg.image }}" alt="{{ aimg.alt | default: aimg.credits }}" />
                     </div>
                     <div class="footer">
-                        {% if {{page.after.alt}} != "" %}
-                            <h3>{{ page.after.alt }}</h3>
-                        {% endif %}
-                        <p>{{ content.credits }}: {{ page.after.credits }}</p>
+                        <h3>{{ aimg.alt }}</h3>
+                        <p>{{ content.credits }}: {{ aimg.credits }}</p>
                     </div>
                 </div>
-                {% else %}
-                <div class="no-card"></div>
-                {% endif %}
+                {% endfor %}
                 <h4 class="about-title">{{ content.about_this_project }}</h4>
                 <div class="about">
                     <div class="col">
@@ -113,11 +109,7 @@
                             <br />
                             <br />
                             {% for link in page.publications %}
-                                {% if {{link.url}} == "" %}
-                                    <span>{{ link.name }}</span>
-                                {% else %}
-                                    <a class="list-links" href="{{ link.url }}" target="_blank">{{ link.name }}</a>
-                                {% endif %}
+                            <a class="list-links" href="{{ link.url }}" target="_blank">{{ link.name }}</a>
                             {% endfor %}
                         </p>
                     </div>
