--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -895,6 +895,7 @@
 
                 @media (min-width: $mobile_screen) {
                     flex-wrap: nowrap;
+                    height: 340px;
                 }
 
                 .media {
