--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -17,31 +17,36 @@
   <div class="list">
     <div id="noResultsMessage"></div>
     {% assign lang = page.lang %} 
-    {% assign projects = site.data.projects[lang] | sort:'title' %} 
-    {% for project in projects %}
-    {% assign tag_names = project.tags | map: 'name' %}
-    <a class="list-item" data-tags="{{ tag_names | join: ',' | downcase }}" data-title="{{project.title}}"
-      href="/{{ lang | append:'/projects/' | append: project.url}}">
-      <div class="container">
-        <div class="card">
-          <div class="media">
-            <div class="overlay">
-              <img src="/assets/images/icons/eye.svg" alt="" class="icon" />
-              <p>{{t.discover_project}}</p>
+    <!--Sort by end date, then group by end-date, then sort again by start date-->
+    {% assign sortedprojects = site.data.projects[lang] | sort: "end-date" | reverse %}
+    {% assign projectgroups = sortedprojects | group_by: "end-date" %}
+    {% for p in projectgroups %} <!--project groups-->
+      {% assign p_innergroup = p.items | sort: "start-date" | reverse %}
+      {% for project in p_innergroup %}
+        {% assign tag_names = project.tags | map: 'name' %}
+        <a class="list-item" data-tags="{{ tag_names | join: ',' | downcase }}" data-title="{{project.title}}"
+          href="/{{ lang | append:'/projects/' | append: project.url}}">
+          <div class="container">
+            <div class="card">
+              <div class="media">
+                <div class="overlay">
+                  <img src="/assets/images/icons/eye.svg" alt="" class="icon" />
+                  <p>{{t.discover_project}}</p>
+                </div>
+                <img src="{{project.image}}" alt="slide" />
+              </div>
+              <div class="content">
+                <h3>{{project.title}}</h3>
+                <p>{{project.description}}</p>
+              </div>
+              <div class="info">
+                <p><span>{{t.where}}</span><br />{{project.location}}</p>
+                <p><span>{{t.year}}</span><br />{{project.date}}</p>
+              </div>
             </div>
-            <img src="{{project.image}}" alt="slide" />
           </div>
-          <div class="content">
-            <h3>{{project.title}}</h3>
-            <p>{{project.description}}</p>
-          </div>
-          <div class="info">
-            <p><span>{{t.where}}</span><br />{{project.location}}</p>
-            <p><span>{{t.year}}</span><br />{{project.date}}</p>
-          </div>
-        </div>
-      </div>
-    </a>
+        </a>
+      {% endfor %}
     {% endfor %}
     <div class="scroll-to-top" id="scroll-top">
       <img src="/assets/images/icons/arrow-up.svg" alt="arrow-up" />
