--- a/_layouts/project_details.html
+++ b/_layouts/project_details.html
@@ -57,29 +57,39 @@
                     </div>
                 </div>
                 {% for bimg in page.before %}
-                <div class="card">
-                    <div class="media">
-                        <img src="{{ bimg.image }}" alt="{{ bimg.alt | default: bimg.credits }}" />
-                    </div>
-                    <div class="footer">
-                        <h3>{{ bimg.alt }}</h3>
-                        <p>{{ content.credits }}: {{ bimg.credits }}</p>
-                    </div>
-                </div>
+                    {% if bimg.image != "" %}
+                        <div class="card">
+                            <div class="media">
+                                <img src="{{ bimg.image }}" alt="{{ bimg.alt | default: bimg.credits }}" />
+                            </div>
+                            <div class="footer">
+                                {% if bimg.alt != "" %}
+                                    <h3>{{ bimg.alt }}</h3>
+                                {% endif %}
+                                <p>{{ content.credits }}: {{ bimg.credits }}</p>
+                            </div>
+                        </div>
+                    {% else %}
+                        <div class="no-card"></div>
+                    {% endif %}
                 {% endfor %}
                 <div class="brief">
                     <p>{{ page.brief | safe }}</p>
                 </div>
                 {% for aimg in page.after %}
-                <div class="card">
-                    <div class="media">
-                        <img src="{{ aimg.image }}" alt="{{ aimg.alt | default: aimg.credits }}" />
-                    </div>
-                    <div class="footer">
-                        <h3>{{ aimg.alt }}</h3>
-                        <p>{{ content.credits }}: {{ aimg.credits }}</p>
-                    </div>
-                </div>
+                    {% if aimg.image != "" %}
+                        <div class="card">
+                            <div class="media">
+                                <img src="{{ aimg.image }}" alt="{{ aimg.alt | default: aimg.credits }}" />
+                            </div>
+                            <div class="footer">
+                                <h3>{{ aimg.alt }}</h3>
+                                <p>{{ content.credits }}: {{ aimg.credits }}</p>
+                            </div>
+                        </div>
+                    {% else %}
+                        <div class="no-card"></div>
+                    {% endif %}
                 {% endfor %}
                 <h4 class="about-title">{{ content.about_this_project }}</h4>
                 <div class="about">
@@ -109,7 +119,11 @@
                             <br />
                             <br />
                             {% for link in page.publications %}
-                            <a class="list-links" href="{{ link.url }}" target="_blank">{{ link.name }}</a>
+                                {% if link.url == "" %}
+                                    <span>{{ link.name }}</span>
+                                {% else %}
+                                    <a class="list-links" href="{{ link.url }}" target="_blank">{{ link.name }}</a>
+                                {% endif %}
                             {% endfor %}
                         </p>
                     </div>
