Removing description in slider on mobile phones

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -325,6 +325,9 @@
         p {
             font-size: 16px;
             line-height: 26px;
+            @media (max-width: 768px){
+                display: none;
+            }
         }
 
         @media (min-width: $mobile_screen) {
