--- a/_includes/blogs.html
+++ b/_includes/blogs.html
@@ -47,17 +47,17 @@
           <div class="media">
             <div class="overlay">
               <img src="/assets/images/icons/eye.svg" alt="" class="icon" />
-              <p>{{t.discover_blog}}</p>
+              <p class="button">{{t.discover_blog}}</p>
             </div>
             <img src="{{blog.image}}" alt="slide" />
           </div>
           <div class="content">
-            <h3>{{blog.title}}</h3>
+            <h3 class="button">{{blog.title}}</h3>
             <p>{{blog.description}}</p>
           </div>
           <div class="info">
-            <p><span>{{t.author}}</span><br />{{blog.author}}</p>
-            <p><span>{{t.posted}}</span><br />{{blog.posted}}</p>
+            <p><span class="button">{{t.author}}</span><br />{{blog.author}}</p>
+            <p><span class="button">{{t.posted}}</span><br />{{blog.posted}}</p>
           </div>
         </div>
       </div>
