--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,7 +13,7 @@
           </span>
         </p>
       </div>
-      <div class="copy-right"><p>© 2024 Sounds in the City</p></div>
+      <div class="copy-right button"><p>© 2024 Sounds in the City</p></div>
     </div>
   </div>
 </footer>
