--- a/_includes/index.html
+++ b/_includes/index.html
@@ -13,7 +13,7 @@
           </a>
           <div class="slide-content">
             <a class="slider-links" href="projects/{{slide.url}}">
-              <h2>{{slide.title}}</h2>
+              <h2 class="button">{{slide.title}}</h2>
               <p>{{slide.description}}</p>
             </a>
           </div>
@@ -54,7 +54,7 @@
         {{ t.cities }} <br />
         {{ t.sound }}
       </h1>
-      <h4>{{t.notbad}}</h4>
+      <h4 class="button">{{t.notbad}}</h4>
       <p>{{t.description}}</p>
     </div>
   </div>
@@ -62,7 +62,7 @@
 <div class="accordions">
   {% for item in t.accordions %}
   <div class="accordion">
-    <button class="acc-header" data-target="{{ item.id }}">
+    <button class="acc-header button" data-target="{{ item.id }}">
       <span class="label container">{{ item.title }}</span>
       <span class="icon"></span>
     </button>
@@ -83,7 +83,7 @@
       <a href="./about.html">
       <div class="overlay">
         <img src="/assets//images/icons/eye.svg" alt="" class="icon" />
-        <p>{{t.discover}}</p>
+        <p class="button">{{t.discover}}</p>
       </div>
       </a>
       <!-- Assuming 6 images, 3 in each row for card1 -->
@@ -92,7 +92,7 @@
     </div>
     
     <div class="card-footer border-t border-l">
-      <h3>{{t.who}}</h3>
+      <h3 class="button">{{t.who}}</h3>
       <p>{{t.meet}}</p>
     </div>
   </div>
@@ -101,13 +101,13 @@
       <a href="./projects/">
       <div class="overlay">
         <img src="/assets/images/icons/eye.svg" alt="" class="icon" />
-        <p>{{t.view}}</p>
+        <p class="button">{{t.view}}</p>
       </div>
       </a>
       <img src="/assets/images/findings.png" alt="" />
     </div>
     <div class="card-footer border-b border-r">
-      <h3>{{t.funding}}</h3>
+      <h3 class="button">{{t.funding}}</h3>
     </div>
   </div>
 </div>
