--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -31,17 +31,17 @@
               <div class="media">
                 <div class="overlay">
                   <img src="/assets/images/icons/eye.svg" alt="" class="icon" />
-                  <p>{{t.discover_project}}</p>
+                  <p class="button">{{t.discover_project}}</p>
                 </div>
                 <img src="{{project.image}}" alt="slide" />
               </div>
               <div class="content">
-                <h3>{{project.title}}</h3>
+                <h3 class="button">{{project.title}}</h3>
                 <p>{{project.description}}</p>
               </div>
               <div class="info">
-                <p><span>{{t.where}}</span><br />{{project.location}}</p>
-                <p><span>{{t.year}}</span><br />{{project.date}}</p>
+                <p><span class="button">{{t.where}}</span><br />{{project.location}}</p>
+                <p><span class="button">{{t.year}}</span><br />{{project.date}}</p>
               </div>
             </div>
           </div>
