--- a/_layouts/blog_details.html
+++ b/_layouts/blog_details.html
@@ -29,11 +29,11 @@
               <div class="info-content">
                 <div class="col">
                   <div class="content">
-                    <h3>{{ content.author }}</h3>
+                    <h3 class="button">{{ content.author }}</h3>
                     <p>{{ page.author }}</p>
                   </div>
                   <div class="content">
-                    <h3>{{ content.when }}</h3>
+                    <h3 class="button">{{ content.when }}</h3>
                     <p>{{ page.posted }}</p>
                   </div>
                 </div>
