--- a/_includes/services.html
+++ b/_includes/services.html
@@ -17,7 +17,7 @@
   </div>
   <div id="banner">
     <div class="logo-text services black">
-      <h4>{{t.difference}}</h4>
+      <h4 class="button">{{t.difference}}</h4>
       <p class="heading">{{t.sound}}</p>
     </div>
     <div class="slider bordered">
@@ -26,7 +26,7 @@
           <div class="slide">
             <img src="{{slide.image}}" alt="{{slide.title}}" />
             <div class="slide-content">
-              <h2>{{slide.title}}</h2>
+              <h2 class="button">{{slide.title}}</h2>
               <p>{{slide.description}}</p>
             </div>
           </div>
@@ -69,7 +69,7 @@
 <div class="accordions">
   {% assign accordions = t.accordions %} {% for item in accordions %}
   <div class="accordion">
-    <button class="acc-header" data-target="{{ item.id }}">
+    <button class="acc-header button" data-target="{{ item.id }}">
       <span class="label container">{{ item.name }}</span>
       <span class="icon"></span>
     </button>
