--- a/_layouts/project_details.html
+++ b/_layouts/project_details.html
@@ -23,21 +23,21 @@
                         <div class="info-content">
                             <div class="col">
                                 <div class="content">
-                                    <h3>{{ content.where }}</h3>
+                                    <h3 class="button">{{ content.where }}</h3>
                                     <p>{{ page.location }}</p>
                                 </div>
                                 <div class="content">
-                                    <h3>{{ content.year }}</h3>
+                                    <h3 class="button">{{ content.year }}</h3>
                                     <p>{{ page.date }}</p>
                                 </div>
                             </div>
                             <div class="col">
                                 <div class="content">
-                                    <h3>{{ content.fundings }}</h3>
+                                    <h3 class="button">{{ content.fundings }}</h3>
                                     <p>{{ page.fundings }}</p>
                                 </div>
                                 <div class="content">
-                                    <h3>{{ content.collaborators }}</h3>
+                                    <h3 class="button">{{ content.collaborators }}</h3>
                                     <p>{{ page.collaborators }}</p>
                                 </div>
                             </div>
@@ -45,7 +45,7 @@
                         <div class="info-content">
                             <div class="tags col">
                                 <div class="content">
-                                    <h3>{{ content.tags }}</h3>
+                                    <h3 class="button">{{ content.tags }}</h3>
                                     <p>
                                         {% for tag in page.tags %}
                                         <span>{{ tag.name }}</span><br>
@@ -64,7 +64,7 @@
                             </div>
                             <div class="footer">
                                 {% if bimg.alt != "" %}
-                                    <h3>{{ bimg.alt }}</h3>
+                                    <h3 class="button">{{ bimg.alt }}</h3>
                                 {% endif %}
                                 <p>{{ content.credits }}: {{ bimg.credits }}</p>
                             </div>
@@ -83,7 +83,7 @@
                                 <img src="{{ aimg.image }}" alt="{{ aimg.alt | default: aimg.credits }}" />
                             </div>
                             <div class="footer">
-                                <h3>{{ aimg.alt }}</h3>
+                                <h3 class="button">{{ aimg.alt }}</h3>
                                 <p>{{ content.credits }}: {{ aimg.credits }}</p>
                             </div>
                         </div>
