Update for slider hdr on small screen

--- a/_includes/index.html
+++ b/_includes/index.html
@@ -13,7 +13,7 @@
           </a>
           <div class="slide-content">
             <a class="slider-links" href="projects/{{slide.url}}">
-              <h2 class="button">{{slide.title}}</h2>
+              <h2 class="slider-hdr button">{{slide.title}}</h2>
               <p>{{slide.description}}</p>
             </a>
           </div>
