--- a/_includes/services.html
+++ b/_includes/services.html
@@ -26,7 +26,7 @@
           <div class="slide">
             <img src="{{slide.image}}" alt="{{slide.title}}" />
             <div class="slide-content">
-              <h2 class="button">{{slide.title}}</h2>
+              <h2 class="slider-hdr button">{{slide.title}}</h2>
               <p>{{slide.description}}</p>
             </div>
           </div>
